# BluePyOpt

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .install_neuron.sh  .jenkins.sh  .readthedocs.yaml  .travis.yml  .travis_install_neuron.sh  .zenodo.json  AUTHORS.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  PITCHME.md  README.md  README.rst  README.txt  codecov.yml  install_neuron.sh  package.json  pyproject.toml  pytest.ini  reduced_cell_install.sh  requirements.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.circleci/: config.yml  config.yml.orig
.github/workflows/: build.yml  keep-alive.yml  main.yml  mirror-ebrains.yml  run-tox.yml  test.yml
bluepyopt/: __init__.py  _version.py  _version.py.bak  api.py  evaluators.py  exceptions.py  importer.py  objectives.py  optimisation.py  optimisations.py  parameters.py  stoppingCriteria.py  stopping_criteria.py  tools.py
bluepyopt/deapcma/: cma_es.py  optimisations.py
bluepyopt/deapext/: CMADEAPoptimisations.py  CMA_ELITIST.py  CMA_MO.py  CMA_SO.py  DEAPoptimisations.py  IBEADEAPoptimisations.py  __init__.py  algorithms.py  cma_es.py  hype.py  multi_cma_es.py  optimisations.py  optimisationsCMA.py  optimisationsIBEA.py  optimisations_cma.py  stoppingCriteria.py  stopping_criteria.py  utils.py
bluepyopt/electrical/: __init__.py  cellevaluator.py  celltemplate.py  efeatures.py  locations.py  mechanisms.py  morphologies.py  objectives.py  parameters.py  parameterscalers.py  protocols.py  recordings.py  responses.py  scorecalculators.py  stimuli.py
bluepyopt/ephys/: __init__.py  acc.py  acc_utils.py  base.py  cellevaluator.py  create_acc.py  create_hoc.py  efeatures.py  efeatures.py.bak  evaluators.py  evaluators.py.bak  extra_features_utils.py  importer.py  locations.py  mechanisms.py  models.py  models.py.bak  morphologies.py  objectives.py  objectivescalculators.py  parameters.py  parameterscalers.py  protocols.py  recordings.py  responses.py  rules.py  scorecalculators.py  serializer.py  serializer.py.bak  simulators.py  stimuli.py
bluepyopt/ipyp/: bpopt_tasksdb.py
bluepyopt/neuroml/: biophys.py  cell.py  morphology.py  simulation.py
bluepyopt/tests/: .gitignore  adexp_opt.py  disable_simplecell_scoop.py  expected_results.json  izhi_opt.py  (+21 more)
cloud-config/: README.md
docs/: Makefile
examples/: BluePyOpt-ipyparallel.md  README.md  __init__.py
(+314 files in other folders)
